--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,8 @@
 ---
-dependencies: []
+dependencies:
+  - ivansible.lin_base    # for common settings and modules
+  - ivansible.cert_base   # for certbot_live_dir
+  - ivansible.nginx_base  # for nginx_ssl_cert
 
 galaxy_info:
   role_name: srv_vscode
@@ -17,7 +20,8 @@ galaxy_info:
 
   galaxy_tags:
     - linux
-    - ansible
+    - vscode
+    - codeserver
 
   github_branch: master
 ...
