--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -4,5 +4,7 @@ rules:
   line-length:
     max: 160
     level: warning
-ignore: templates/config.yaml
+ignore: |
+  .cache
+  templates/config.yaml
 ...
